--- a/SI2-LesPatatesDouces/projet/code/index.html
+++ b/SI2-LesPatatesDouces/projet/code/index.html
@@ -36,12 +36,18 @@
                 </v-row>
             </div>
             <div v-if="logged == true">
-                <flight-table></flight-table>
+                <flight-table v-on:tickets="showTickets"></flight-table>
+                <div v-if="vol != 0">
+                    <tickets-table v-bind:vol="vol"></tickets-table>
+                </div>
                 <v-row align="center" justify="space-around">
                     <v-btn @click="seeReservation">Voir mes billets réservés</v-btn>
                     <v-btn color="error" class="mr-4" @click="signOut">Se déconnecter</v-btn>
                 </v-row>
 
+            </div>
+            <div v-if="showTickets == true">
+                <h1>Hello</h1>
             </div>
 
         </v-app>
@@ -66,17 +72,22 @@
                 logged: false,
                 isSignedUp: null,
                 showSignUpForm: false,
-                showSignInForm: false
+                showSignInForm: false,
+                vol: 0
             },
             components: {
                 'signing-in': signingIn,
                 'signing-up': signingUp,
                 'btn-return': btnReturn,
-                'flight-table': flightTable
+                'flight-table': flightTable,
+                'tickets-table': ticketsTable
             },
             methods: {
                 seeReservation() {
 
+                },
+                showTickets(id) {
+                    this.vol = id
                 },
                 retour() {
                     this.logged = false
@@ -104,6 +115,7 @@
                 },
                 seConnecter() {
                     this.showSignInForm = true
+                    this.vol = 0
                 },
                 sInscrire() {
                     this.showSignUpForm = true
@@ -112,6 +124,7 @@
                 signOut() {
                     this.logged = false
                     this.signedUp = null
+                    this.vol = 0
                     fetch("http://localhost:5000/sign-out", {
                         method: 'POST',
                         headers: {
