--- a/Projet/Site/connection.html
+++ b/Projet/Site/connection.html
@@ -4,6 +4,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <title>Connection MalESIEA-Airlines</title>
     <link rel="stylesheet" href="styles.css"/>
+    <meta charset="UTF-8">
 </head>
 <body>
     
@@ -16,19 +17,20 @@
 <p>Merci de vous connecter pour accéder aux reservations.</p>
             <br>
     
-    <form action="verification.php" method="get">
+    <form>
         Adresse Mail : 
         <input type="text" name="mail">
         <br><br>
         Mot de Passe :
-        <input type="password" name="mail">
+        <input type="password" name="password">
         <br><br>
- <!--    <input type="submit" name="submit" value="Connexion"> -->
-        <a href="reservation.html">Connection</a>
+        <input type="submit" name="submit" value="Connexion">
+       <!-- <a href="reservation.html">Connection</a>-->
     </form>
 </div>
+<div id="div"></div>
 
  
-
+<script src="./javascript/connexion.js"></script>
 </body>
 </html>
