--- a/Projet/Site/inscriptionOuConnection.html
+++ b/Projet/Site/inscriptionOuConnection.html
@@ -4,6 +4,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <title>Connection MalESIEA-Airlines</title>
     <link rel="stylesheet" href="styles.css"/>
+    <meta charset="UTF-8">
 </head>
 <body>
     
